--- a/Test02/Views/GiaoHang/DanhSachPhuongTienGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/DanhSachPhuongTienGiaoHang.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_phuongtienGH = "active";
     ViewBag.nd = "Danh sách phương tiện giao hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 <div class="row">
