--- a/Test02/Views/GiaoHang/DanhSachShipper.cshtml
+++ b/Test02/Views/GiaoHang/DanhSachShipper.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_shippers = "active";
     ViewBag.nd = "Danh sách nhân viên giao hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 <link href="/website/css/uicons-outline-rounded.css" rel="stylesheet">
