--- a/Test02/Views/KeToan/DSDaiLy.cshtml
+++ b/Test02/Views/KeToan/DSDaiLy.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.dsdl = "active";
     ViewBag.nd = "Danh sách đại lý";
-    QuanLyDLEntities2 database = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 database = new QuanLyDLproEntities2();
 
 }
 <link href="~/Content/KeToan/badges.css" rel="stylesheet" />
