--- a/Test02/Views/KeToan/ThongKe.cshtml
+++ b/Test02/Views/KeToan/ThongKe.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.tk = "active";
     ViewBag.nd = "Thống kê";
-    QuanLyDLEntities2 database = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 database = new QuanLyDLproEntities2();
 }
 
 <div class="row">
