--- a/Test02/Views/KeToan/XoaCN.cshtml
+++ b/Test02/Views/KeToan/XoaCN.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.cn = "active";
     ViewBag.nd = "Xóa phiếu công nợ";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 
 }
 
