--- a/Test02/Views/KhachHang/DonHangDL.cshtml
+++ b/Test02/Views/KhachHang/DonHangDL.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
     ViewBag.dhdl = "active";
     ViewBag.nd = "Trang Đơn Hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 <ul class="nav nav-tabs">
