--- a/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
+++ b/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Test02.Models;
 @{
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 
 }
 <!DOCTYPE html>
