--- a/Test02/Views/KhachHang/PageDatHang.cshtml
+++ b/Test02/Views/KhachHang/PageDatHang.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
     ViewBag.gh = "active";
     ViewBag.nd = "Trang đặt hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 <div class="row">
