--- a/Test02/Views/KinhDoanh/ChinhSuaCTDH.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaCTDH.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
     ViewBag.dh = "active";
     ViewBag.nd = "Chỉnh sửa chi tiết đơn hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 <div class="tile">
