--- a/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
+++ b/Test02/Views/KinhDoanh/DanhSachCTDH.cshtml
@@ -7,7 +7,7 @@
     ViewBag.dh = "active";
     ViewBag.nd = "Danh sách chi tiết đơn hàng";
     ViewBag.hieuung = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dssp = db.SanPhams.ToList();
     var madh = "";
 }
