--- a/Test02/Views/KinhDoanh/QuanLyDL.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDL.cshtml
@@ -6,7 +6,7 @@
     ViewBag.dl = "active";
     ViewBag.nd = "Danh sách đại lý";
     ViewBag.hieuung2 = "bx-tada";
-    QuanLyDLEntities2 database = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 database = new QuanLyDLproEntities2();
     List<LoaiDL> LoaiDL = database.LoaiDLs.ToList();
 }
 
