--- a/Test02/Views/KinhDoanh/QuanLyHD.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyHD.cshtml
@@ -6,7 +6,7 @@
     ViewBag.hd = "active";
     ViewBag.nd = "Danh sách hóa đơn";
     ViewBag.hieuung4 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 <h2>Danh sách hóa đơn</h2>
 
