--- a/Test02/Views/PhongKho/CreatePXuat.cshtml
+++ b/Test02/Views/PhongKho/CreatePXuat.cshtml
@@ -6,7 +6,7 @@
     ViewBag.dhxdd = "active";
     ViewBag.Name = "Tạo phiếu xuất kho";
     ViewBag.hieuung4 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var kho = db.Khoes.ToList();
     var ctdonhang = db.ChiTietDonHangs.ToList();
 
