--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -6,7 +6,7 @@
     ViewBag.hh = "active";
     ViewBag.Name = "Quản lý hàng hóa";
     ViewBag.hieuung3 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<string> listSHH = new List<string>();
     List<string> listHH = new List<string>();
     int soluong = 0;
