--- a/Test02/Views/PhongKho/Themkho.cshtml
+++ b/Test02/Views/PhongKho/Themkho.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Name = "Thêm kho mới";
     ViewBag.qlk = "active";
     ViewBag.hieuung2 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dskho = db.Khoes.ToList();
 }
 
