--- a/Test02/Views/QTV/ChitietNV.cshtml
+++ b/Test02/Views/QTV/ChitietNV.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/QTV/Layout/LayoutQTV.cshtml";
     ViewBag.qtnv = "active";
     ViewBag.nd = "Chi tiết thông tin";
-    QuanLyDLEntities2 database = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 database = new QuanLyDLproEntities2();
 }
 
 
