--- a/Test02/Views/QTV/ThemNV.cshtml
+++ b/Test02/Views/QTV/ThemNV.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Thêm account";
     Layout = "~/Views/QTV/Layout/LayoutQTV.cshtml";
-    QuanLyDLEntities2 database = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 database = new QuanLyDLproEntities2();
     ViewBag.qtnv = "active";
     ViewBag.nd = "Thêm mới account nhân viên";
 }
