--- a/Test02/Views/GiaoHang/CapNhatDonGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/CapNhatDonGiaoHang.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_dongiaohang = "active";
     ViewBag.nd = "Cập nhật trạng thái đơn hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<ChuyenGiao> ct = db.ChuyenGiaos.ToList();
     var ctcg = db.ChuyenGiaos.ToList();
 
