--- a/Test02/Views/GiaoHang/CapNhatTrangThaiDonHang.cshtml
+++ b/Test02/Views/GiaoHang/CapNhatTrangThaiDonHang.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_donhangmoi = "active";
     ViewBag.nd = "Xếp đơn";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<ChuyenGiao> ct = db.ChuyenGiaos.ToList();
     var ctcg = db.ChuyenGiaos.ToList();
 
