--- a/Test02/Views/GiaoHang/ChiTietDonHang.cshtml
+++ b/Test02/Views/GiaoHang/ChiTietDonHang.cshtml
@@ -6,7 +6,7 @@
     ViewBag.gh_dongiaohang = "active";
     ViewBag.nd = "Chi tiết đơn hàng";
     ViewBag.hieuung4 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 @{
