--- a/Test02/Views/GiaoHang/DanhSachCacChuyenGiao.cshtml
+++ b/Test02/Views/GiaoHang/DanhSachCacChuyenGiao.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_cg = "active";
     ViewBag.nd = "Danh sách các chuyến giao hàng";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 
