--- a/Test02/Views/GiaoHang/DonDaGiao.cshtml
+++ b/Test02/Views/GiaoHang/DonDaGiao.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_dongiaohang = "active";
     ViewBag.nd = " Danh sách đơn hàng đang giao";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 
