--- a/Test02/Views/GiaoHang/DonHangMoi.cshtml
+++ b/Test02/Views/GiaoHang/DonHangMoi.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_donhangmoi = "active";
     ViewBag.nd = "Danh sách đơn hàng mới cần giao";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 
