--- a/Test02/Views/GiaoHang/InHoaDon.cshtml
+++ b/Test02/Views/GiaoHang/InHoaDon.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.gh_cg = "active";
     ViewBag.nd = "In hóa đơn";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<ChiTietDonHang> ct = db.ChiTietDonHangs.ToList();
 }
 
