--- a/Test02/Views/GiaoHang/ThemChuyenGiaoHang.cshtml
+++ b/Test02/Views/GiaoHang/ThemChuyenGiaoHang.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/GiaoHang/Layout/LayoutGH.cshtml";
     ViewBag.nd = "Thêm chuyến giao hàng";
     ViewBag.gh_cg = "active";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var nvgh = db.NhanVienGHs.ToList();
     var ptgh = db.PhuongTienGHs.ToList();
 }
