--- a/Test02/Views/KeToan/ChinhsuCN.cshtml
+++ b/Test02/Views/KeToan/ChinhsuCN.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.dsdl = "active";
     ViewBag.nd = "Danh sách công nợ chưa thanh toán";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
  
 }
 
