--- a/Test02/Views/KeToan/QLCongno.cshtml
+++ b/Test02/Views/KeToan/QLCongno.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.cn = "active";
     ViewBag.nd = "Danh sách Công nợ";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<HoaDon> ctdh = db.HoaDons.ToList();
 }
 
