--- a/Test02/Views/KeToan/QLDonChoGiao.cshtml
+++ b/Test02/Views/KeToan/QLDonChoGiao.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.qlhd = "active";
     ViewBag.nd = "Danh sách đơn hàng chờ giao";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
 
 }
