--- a/Test02/Views/KeToan/TaoHD.cshtml
+++ b/Test02/Views/KeToan/TaoHD.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.qldonhangkt = "active";
     ViewBag.nd = "Tạo hóa đơn";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<ChiTietDonHang> chiTietDonHangs = db.ChiTietDonHangs.ToList();
 
 }
