--- a/Test02/Views/KeToan/Thongbao.cshtml
+++ b/Test02/Views/KeToan/Thongbao.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     ViewBag.tb = "active";
     ViewBag.nd = "Thông báo";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 
 }
 
