--- a/Test02/Views/KeToan/XuatCN.cshtml
+++ b/Test02/Views/KeToan/XuatCN.cshtml
@@ -5,7 +5,7 @@
     @{
         ViewBag.Title = "XuatCN";
         Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
-        QuanLyDLEntities2 db = new QuanLyDLEntities2();
+        QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
         ViewBag.cn = "active";
         ViewBag.nd = "Xuất phiếu công nợ";
     }
