--- a/Test02/Views/KinhDoanh/ChiTietPhieuXuatKho.cshtml
+++ b/Test02/Views/KinhDoanh/ChiTietPhieuXuatKho.cshtml
@@ -6,7 +6,7 @@
     ViewBag.TN = "active";
     ViewBag.nd = "Chi tiết phiếu đề nghị xuất kho";
     ViewBag.hieuung = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dsSP = db.SanPhams.ToList();
     var dsCTKho = db.ChiTietKhoes.ToList();
     List<string> distint = new List<string>();
