--- a/Test02/Views/KinhDoanh/QuanLyDH.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDH.cshtml
@@ -6,7 +6,7 @@
     ViewBag.dh = "active";
     ViewBag.nd = "Danh sách đơn hàng";
     ViewBag.hieuung3 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     List<ChiTietDonHang> ctdh = db.ChiTietDonHangs.ToList();
     var dsdl = db.DaiLies.ToList();
     var dssp = db.SanPhams.ToList();
