--- a/Test02/Views/KinhDoanh/XoaDH.cshtml
+++ b/Test02/Views/KinhDoanh/XoaDH.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "XoaDH";
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     ViewBag.dh = "active";
     ViewBag.nd = "Xóa đơn hàng ";
 }
