--- a/Test02/Views/PhongKho/BaoCao.cshtml
+++ b/Test02/Views/PhongKho/BaoCao.cshtml
@@ -6,7 +6,7 @@
     ViewBag.bc = "active";
     ViewBag.Name = "Báo cáo kho hàng";
     ViewBag.hieuung6 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dsnv = db.NhanViens.ToList();
     var dscv = db.ChucVus.ToList();
 
