--- a/Test02/Views/PhongKho/ChiTietDonHang.cshtml
+++ b/Test02/Views/PhongKho/ChiTietDonHang.cshtml
@@ -6,7 +6,7 @@
     ViewBag.dhxdd = "active";
     ViewBag.Name = "Danh sách chi tiết đơn hàng";
     ViewBag.hieuung4 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 
 @{
