--- a/Test02/Views/PhongKho/CreateCTKho.cshtml
+++ b/Test02/Views/PhongKho/CreateCTKho.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Name = "Tạo chi tiết kho";
     ViewBag.qlk = "active";
     ViewBag.hieuung2 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dssp = db.SanPhams.ToList();
 
     //Sản phẩm chưa có trong kho
