--- a/Test02/Views/PhongKho/DSDonHang.cshtml
+++ b/Test02/Views/PhongKho/DSDonHang.cshtml
@@ -5,7 +5,7 @@
     ViewBag.dhxdd = "active";
     ViewBag.Name = "Đơn hàng đã xét duyệt";
     ViewBag.hieuung4 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var listDH = db.DonHangs.ToList();
 }
 
