--- a/Test02/Views/PhongKho/DetailsPXK.cshtml
+++ b/Test02/Views/PhongKho/DetailsPXK.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.nk = "active";
     ViewBag.hieuung4 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var kho = db.Khoes.ToList();
     var ctdonhang = db.ChiTietDonHangs.ToList();
 }
