--- a/Test02/Views/PhongKho/EditCTKho.cshtml
+++ b/Test02/Views/PhongKho/EditCTKho.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Name = "Chỉnh sửa chi tiết kho";
     ViewBag.qlk = "active";
     ViewBag.hieuung2 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
 }
 @{
     var checkMessage = TempData["AlertMessage"];
