--- a/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
+++ b/Test02/Views/PhongKho/GiaiQuyetTonKho.cshtml
@@ -6,7 +6,7 @@
     ViewBag.hh = "active";
     ViewBag.Name = "Giải phóng hàng tồn kho";
     ViewBag.hieuung3 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dsCTKho = db.ChiTietKhoes.ToList();
     List<string> distint = new List<string>();
 }
