--- a/Test02/Views/PhongKho/TonKho.cshtml
+++ b/Test02/Views/PhongKho/TonKho.cshtml
@@ -5,7 +5,7 @@
     ViewBag.tk = "active";
     ViewBag.Name = "Tồn kho";
     ViewBag.hieuung3 = "bx-tada";
-    QuanLyDLEntities2 db = new QuanLyDLEntities2();
+    QuanLyDLproEntities2 db = new QuanLyDLproEntities2();
     var dsctk = db.ChiTietKhoes.ToList();
 }
 @{
